tests/negative/symbols/recursive.orng
fn main() -> Int 
    let x = x
    0